<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">MyHelloWorld</string>
    <string name="action_settings">Settings</string>
    <string name="input_hint">Please input two diameters:</string>
    <string name="calculate">Calculate</string>
    <string name="zero">0.0</string>
    <string name="output_hint">Sum of two area is:</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="choose_wire_number_hint">Please choose wire number:</string>
    <string name="choose_next">Next</string>
    <string name="match_wire">Match wire</string>

</resources>