<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/choose_hint"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/choose_wire_number_hint"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/radio_choose_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radio_number_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/number_1" />

        <RadioButton
            android:id="@+id/radio_number_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_2" />

        <RadioButton
            android:id="@+id/radio_number_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_3" />
        
        <RadioButton
            android:id="@+id/radio_number_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_4" />
                
        <RadioButton
            android:id="@+id/radio_number_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_5" />
                        
        <RadioButton
            android:id="@+id/radio_number_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_6" />
    </RadioGroup>

    <Button
        android:id="@+id/choose_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_next" />

</LinearLayout>