<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_hint"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/diameter_edit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/diameter_edit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/diameter_edit1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/output_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/diameter_edit2"
        android:layout_marginTop="50dp"
        android:text="@string/output_hint"
        android:textSize="18sp" />

    <Button
        android:id="@+id/calculate_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result_view"
        android:layout_centerHorizontal="true"
        android:onClick="calculateArea"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/result_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/output_hint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button_match_wire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calculate_area"
        android:layout_centerHorizontal="true"
        android:onClick="startActivityChooseWireNumber"
        android:layout_marginTop="16dp"
        android:text="@string/match_wire" />

</RelativeLayout>